fix: ItemCard ItemInfo stopped overflow in Desktop size

--- a/client/src/styles/components/_itemcard.scss
+++ b/client/src/styles/components/_itemcard.scss
@@ -30,6 +30,10 @@
     margin-top: 10px;
     margin-bottom: 20px;
 
+    @include media('>=tablet') {
+      width: 300px;
+    }
+
     @include media('<=phone') {
       align-self: center;
       align-items: center;
